Issue Fixes: - Fixed the scrollbar being shown for split seconds on html,body,#root of webviews, when fast scroll was happening
Updates:
- Changed the debug log fetcher so that we dont need have button for apply filters,
filters are applied automatically when the user changes the filter value

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 /* Make all MUI components respect container boundaries */
